<resources>
    <string name="app_name">K22411CSampleProject</string>
    <string name="title_login_user_name">User name:</string>
    <string name="title_login_password">Password</string>
    <string name="title_login_user_name_hint">Enter your user name</string>
    <string name="title_login_save_login_infor">Save login infor</string>
    <string name="title_login_button_login">Login</string>
    <string name="confirm_exit_title">Exit confirmation</string>
    <string name="confirm_exit_message">Are you sure want to exit?</string>
    <string name="confirm_exit_yes">YES</string>
    <string name="confirm_exit_no">NO</string>
    <string name="title_employee">Employee</string>
    <string name="title_customer">Customer</string>
    <string name="title_healthcare">Health Care</string>
    <string name="title_salary">Salary</string>
    <string name="title_employee_healthcare">Employee Healthcare</string>
    <string name="title_height">Height:</string>
    <string name="title_weight">Weight:</string>
    <string name="title_caculate">Caculate</string>
    <string name="title_clear">Clear</string>
    <string name="title_close">Close</string>
    <string name="title_slim">Slim</string>
    <string name="title_normal">Normal</string>
    <string name="title_fat">Fat</string>
    <string name="title_schedule">Schedule</string>
    <string name="title_task">Task</string>
    <string name="title_information">Information</string>
    <string name="title_training">Training</string>
    <string name="title_policy">Policy</string>
    <string name="title_reward">Reward</string>
    <string name="title_career">Career</string>
    <string name="title_hr">HR</string>
    <string name="title_category">Category</string>
    <string name="title_product">Product</string>
    <string name="title_advancedproduct">Advanced Product</string>
    <string name="title_new_customer">New Customer</string>
    <string name="title_broadcast_advertising">Broadcast Advertising</string>
    <string name="title_help">Help</string>
    <string name="title_customer_detail">Customer Details</string>
    <string name="title_customer_id">Customer ID:</string>
    <string name="title_customer_name">Customer Name:</string>
    <string name="title_customer_email">Customer Email:</string>
    <string name="title_customer_phone">Customer Phone:</string>
    <string name="title_new">NEW</string>
    <string name="tile_save">SAVE</string>
    <string name="title_remove">REMOVE</string>
    <string name="title_add_product">Add Product</string>
    <string name="title_generate_report">Generate Report</string>
    <string name="title_product_id">Product ID:</string>
    <string name="title_product_name">Product Name:</string>
    <string name="title_product_quantity">Quantity:</string>
    <string name="title_product_price">Price:</string>
    <string name="title_product_calories">Calories:</string>
    <string name="title_product_description">Product Description:</string>
    <string name="title_payment_method">Payment Method</string>
    <string name="title_payment_detail">Payment Details</string>
    <string name="title_payment_id">Payment ID:</string>
    <string name="title_payment_name">Payment Name:</string>
    <string name="title_payment_description">Payment Description:</string>
    <string name="title_payment_active">Active</string>
    <string name="title_orders">Orders</string>
    <string name="title_telephony">Telephony</string>
    <string name="title_contact_name">Contact Name:</string>
    <string name="title_phone_number">Phone Number:</string>
    <string name="title_handler_send_message">HANDLER SEND MESSAGE</string>
    <string name="title_handler_post_message">HANDLER POST MESSAGE</string>
    <string name="title_asynctask">ASYNCTASK</string>
    <string name="title_draw">DRAW</string>
    <string name="title_number_of_customer">Number of Customer:</string>


</resources>