<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TableLayout
        android:stretchColumns="*"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imgEmployee"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:scaleType="centerCrop"
                    app:srcCompat="@mipmap/ic_employee" />

                <TextView
                    android:id="@+id/txtEmployee"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_employee"
                    android:textAlignment="center"
                    android:textColor="#DC2929"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imgCustomer"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:scaleType="centerCrop"
                    app:srcCompat="@mipmap/ic_customer" />

                <TextView
                    android:id="@+id/txtCustomer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_customer"
                    android:textAlignment="center"
                    android:textColor="#DC2929"
                    android:textSize="18sp" />
            </LinearLayout>
        </TableRow>

        <TableRow
            android:layout_marginBottom="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imgProduct"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:scaleType="centerCrop"
                    app:srcCompat="@mipmap/ic_category" />

                <TextView
                    android:id="@+id/txtProduct"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_product"
                    android:textAlignment="center"
                    android:textColor="#DC2929"
                    android:textSize="18sp" />

            </LinearLayout>
            <LinearLayout
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/imgadvancedproduct"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    app:srcCompat="@mipmap/ic_product"
                    android:scaleType="centerCrop" />

                <TextView
                    android:id="@+id/txtAdvancedproduct"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_advancedproduct"
                    android:textAlignment="center"
                    android:textColor="#DC2929"
                    android:textSize="16sp" />

            </LinearLayout>

        </TableRow>

        <TableRow
            android:layout_marginBottom="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/imgPaymentMethod"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    app:srcCompat="@mipmap/ic_payment_method"
                    android:scaleType="centerCrop" />

                <TextView
                    android:id="@+id/txtPaymentMethod"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_payment_method"
                    android:textAlignment="center"
                    android:textColor="#DC2929"
                    android:textSize="18sp" />
            </LinearLayout>
            <LinearLayout
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/imgOrder"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    app:srcCompat="@mipmap/ic_order"
                    android:scaleType="centerCrop" />

                <TextView
                    android:id="@+id/txtOrder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_orders"
                    android:textAlignment="center"
                    android:textColor="#DC2929"
                    android:textSize="18sp" />
            </LinearLayout>
        </TableRow>

        <TableRow
            android:layout_marginBottom="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/imgTelephony"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    app:srcCompat="@mipmap/ic_telephony"
                    android:scaleType="centerCrop" />

                <TextView
                    android:id="@+id/txtTelephony"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_telephony"
                    android:textAlignment="center"
                    android:textColor="#DC2929"
                    android:textSize="20sp" />
            </LinearLayout>
            <LinearLayout
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/imgMultiThreading"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    app:srcCompat="@mipmap/ic_multithreading"
                    android:scaleType="centerCrop" />

                <TextView
                    android:id="@+id/txtMultiThreading"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_reward"
                    android:textAlignment="center"
                    android:textColor="#DC2929"
                    android:textSize="24sp" />
            </LinearLayout>
        </TableRow>
        <TableRow
            android:layout_marginBottom="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/imgPolicy"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    app:srcCompat="@mipmap/ic_policy"
                    android:scaleType="centerCrop" />

                <TextView
                    android:id="@+id/txtPolicy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_policy"
                    android:textAlignment="center"
                    android:textColor="#DC2929"
                    android:textSize="24sp" />
            </LinearLayout>
            <LinearLayout
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/imgHR"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    app:srcCompat="@mipmap/ic_hr_department"
                    android:scaleType="centerCrop" />

                <TextView
                    android:id="@+id/txtHR"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_hr"
                    android:textAlignment="center"
                    android:textColor="#DC2929"
                    android:textSize="24sp" />
            </LinearLayout>
        </TableRow>

    </TableLayout>
</ScrollView>